fix(panel): drop z-index usage for internal component styles

--- a/src/components/panel/panel.scss
+++ b/src/components/panel/panel.scss
@@ -68,7 +68,6 @@
 :host([loading]) .container,
 :host([disabled]) .container {
   @apply relative;
-  z-index: 1;
 }
 
 .header {
@@ -81,7 +80,6 @@
     items-stretch
     justify-start;
   flex: 0 0 auto;
-  z-index: 2;
 }
 
 .header-content {
@@ -180,5 +178,4 @@
   block
   p-2;
   width: fit-content;
-  z-index: 1;
 }
